# metadatahub

./: .env.example  .env.prod  .gitignore  CLAUDE.md  MetadataHub_Complete_Knowledge_Base.md  PLAN.md  QUICKSTART.md  README.md  deploy_web.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/server/: Dockerfile  alembic.ini  pyproject.toml
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial_schema.py  0002_permission_tables.py  0003_dashboard_configs.py  0004_dashboard_multi.py  0005_platform_config.py  0006_partner_system.py
apps/server/app/: config.py  database.py  main.py
apps/server/app/api/: admin.py  ai_admin.py  auth.py  config.py  conversations.py  dashboards.py  datasets.py  health.py  partner.py  query.py  templates.py
apps/server/app/middleware/: auth.py
apps/server/app/models/: __init__.py  conversation.py  dashboard.py  dataset.py  partner.py  permission.py  platform.py  refresh_token.py  user.py
apps/server/app/schemas/: admin.py  auth.py  conversation.py  dashboard.py  dataset.py  partner.py  platform.py  query.py  template.py  user.py
apps/server/app/services/: ai_engine.py  crypto.py  dashboard_generator.py  permission_map.py  permission_resolver.py  platform_config.py  query_executor.py  schema_discovery.py  token_service.py
apps/server/scripts/: generate_sample_data.py  seed.py  seed_partner_dashboard.py  seed_partners.py  seed_widget_library.py
apps/server/tests/: test_auth.py  test_datasets.py  test_query.py
examples/: sample_partner_data.xlsx
scripts/: deploy.sh  (+1 more)
(+60 files in other folders)
